# AgentMemory

./: .gitignore  DESIGN.md  README.md  agent_v1.py  agent_v1_0.py  agent_v2.py  agent_v3.py  agentmemory.db  memory.py  memory_v1_0.py  memory_v2.py  memory_v3.py  persistence.py  pyproject.toml  setup.py  similarity.py  test.db  test_memory.py
agentmemory/: __init__.py  memory_basic.py  summarizer.py
agentmemory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
